[package]
name = "poisoning-rustc"
version = "0.1.0"
edition = "2021"
authors = ["Neutron3529 <qweytr_1@163.com>"]
description = "A simple crate that poisoning crates.io. DO NOT reference nor build this crate unless you want to see what it could do towards your `rustc`."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
